# TomLLM

./: .gitignore  Dockerfile  README.md  api.py  call_llm.py  config.py  pyproject.toml  requirements.txt  ruff.toml  tests.py
docker/: supervisord.conf
src/: CV-22-05-2025.txt  api.py  call_llm.py  config.py  models.py  system_prompt.py
src/app/: README.md  db.sqlite3
src/app/.github/: copilot-instructions.md
src/app/llmhost/: apps.py  urls.py  views.py
src/app/llmhost/templates/llmhost/: llm_form.html
src/app/webapp/: settings.py  urls.py
tomllm/api/: __init__.py  app.py  models.py
tomllm/api/tests/: test_api.py
tomllm/core/: CV-22-05-2025.txt  __init__.py  llm.py  settings.py
tomllm/core/prompts/: system.txt
tomllm/web/: manage.py
tomllm/web/llmhost/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
tomllm/web/llmhost/templates/llmhost/: llm_form.html
tomllm/web/tests/: __init__.py  test_views.py
tomllm/web/webapp/: asgi.py  settings.py  urls.py  wsgi.py
