[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomllm"
version = "0.1.0"
description = "TomLLM project: Django + FastAPI LLM host"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
    "fastapi",
    "google-genai",
    "pydantic",
    "pydantic-ai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
# Keep packaging simple; add package-dir or packages if needed

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "TID", "ARG", "PL", "RUF"]
ignore = ["E501"]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "env",
    "venv",
    "migrations",
]
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
python-version = "3.13"

[tool.uv.scripts]
django = "python src/app/manage.py runserver"
api = "uvicorn src.api:router --host 0.0.0.0 --port 8001 --reload"
test = "pytest"
format = "ruff format ."
lint = "ruff check ."
