[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomllm"
version = "0.1.0"
description = "TomLLM project: Django + FastAPI LLM host"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
    "fastapi",
    "google-genai",
    "pydantic",
    "pydantic-ai",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = ["tomllm"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "TID", "ARG", "PL", "RUF"]
ignore = ["E501"]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "env",
    "venv",
    "migrations",
]
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tomllm/api/tests",
    "tomllm/web/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "integration: marks tests as integration tests",
    "api: marks tests as API tests",
    "web: marks tests as web tests",
]

[tool.uv]
python-preference = "managed"

[project.scripts]
tomllm-web = "tomllm.web.manage:main"
tomllm-api = "tomllm.api.app:main"
